Day5/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektutor 
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
spec:
  rules:
  - host: tektutor.apps.ocp.tektutor-ocp-labs
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /nginx
        pathType: Prefix 

      - backend:
          service:
            name: test 
            port:
              number: 8080
        path: /hello
        pathType: Prefix
